log/build_2022-03-31_12-45-54/central/stderr.log
  File "/app/dev_ws/install/central/lib/python3.8/site-packages/central/central_config.py", line 62
    while time.time() < t_end
                            ^
SyntaxError: invalid syntax

